some content added

--- a/index.html
+++ b/index.html
@@ -5,3 +5,7 @@
 </head>
 <body>
 <h1>NARNI PRAVEEN BABU</h1>
+<h3>My favourite Team Sport is Cricket</h3>
+<p>I like cricket because it provides physical health benefits.<b>It also improves our Team skills, Social skills such as cooperation, communication, Social interaction </b>– it's a great way to meet new people and make new friends.</p>
+</body>
+</html>
