--- a/index.html
+++ b/index.html
@@ -7,5 +7,15 @@
 <h1>NARNI PRAVEEN BABU</h1>
 <h3>My favourite Team Sport is Cricket</h3>
 <p>I like cricket because it provides physical health benefits.<b>It also improves our Team skills, Social skills such as cooperation, communication, Social interaction </b>– it's a great way to meet new people and make new friends.</p>
+<hr>
+<h3>Favourite Team and the best Players</h3>
+<ol>Mumbai Indians</ol>
+<b>The best Players are:</b>
+<ol>
+    <li>Rohith Sharma</li>
+    <li>Kieron Pollard</li>
+    <li>Suryakumar Yadav</li>
+</ol>
+
 </body>
 </html>
