unordered list added

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
     <li>Kieron Pollard</li>
     <li>Suryakumar Yadav</li>
 </ol>
+<b>Other Teams are:</b>
+<ul>
+    <li>Chennai Superkings</li>
+    <li>Royal Challengers Banglore</li>
+    <li>Sunrisers Hyderabad</li>
+</ul>
 
 </body>
 </html>
