--- a/aboutme.html
+++ b/aboutme.html
@@ -7,14 +7,10 @@
     <p>I'm Praveen Babu Narni pursuing my masters in Applied Computer Science at Northwest Missouri State and I'm ambitious, sincere, responsible, sociable, trustworthy, cheerful.</p>
 <h1>Redeeming Love</h1>
 <p>It is based on a true story and is one of the greatest love stories I have ever read. The author is also quite amazing.”</p>
-
-
-
+<img src="/images/RL-Movie-1024x1024.jpg"
+height=”200” width=“100”
+alt="Click here for Book Image">
+<br>
+<a href= "https://github.com/44-563-Web-Apps-S23/44563-webapps-assignment-3-praveennarni/blob/main/aboutme.html"> Click here for Aboutme </a >
 </body>
-
-
-
-
-
-
 </html>
