code snippet added

--- a/aboutme.html
+++ b/aboutme.html
@@ -12,5 +12,48 @@ height=”200” width=“100”
 alt="Click here for Book Image">
 <br>
 <a href= "https://github.com/44-563-Web-Apps-S23/44563-webapps-assignment-3-praveennarni/blob/main/aboutme.html"> Click here for Aboutme </a >
+<br>
+<h3>Table</h3>
+<table>
+    <tr>
+        <th>Country Name</th>
+        <th>Reason</th>
+        <th>Number of Days</th>
+    </tr>
+    <tr
+    align="center">
+        <td>India</td>
+        <td>To explore different cultures and traditions</td>
+        <td>60</td>
+    </tr>
+    <tr
+    align="center">
+        <td>USA</td>
+        <td>It is the best place for Technology</td>
+        <td>90</td>
+    </tr>
+    <tr
+    align="center">
+        <td>United Kingdom</td>
+        <td>London is a fashion hub</td>
+        <td>30</td>
+    </tr>
+    <tr
+    align="center">
+        <td>Australia</td>
+        <td>Great Barrier Reef,this place is 'Iavish' and 'beauty'</td>
+        <td>30</td>
+    </tr>
+</table>
+<hr>
+<h1>Code Display</h1>
+<blockquote cite=“https://stackoverflow.com/questions/75355690/javascript-to-edit-url”> Javascript to edit pathArray </blockquote >
+    <pre>
+    var newPathname = "";
+    for (i = 0; i < pathArray.length; i++) {
+      newPathname += "/";
+      newPathname += pathArray[i];
+    }
+</pre>
 </body>
 </html>
