--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <li>Royal Challengers Banglore</li>
     <li>Sunrisers Hyderabad</li>
 </ul>
-
+<a href= "https://github.com/44-563-Web-Apps-S23/44563-webapps-assignment-3-praveennarni/blob/main/aboutme.html"> Click here for Aboutme </a >
 </body>
 </html>
