bonus file created

--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,22 @@
     <p>I'm Praveen Babu Narni pursuing my masters in Applied Computer Science at Northwest Missouri State and I'm ambitious, sincere, responsible, sociable, trustworthy, cheerful.</p>
 <h1>Redeeming Love</h1>
 <p>It is based on a true story and is one of the greatest love stories I have ever read. The author is also quite amazing.”</p>
-<img src="/images/RL-Movie-1024x1024.jpg"
-height=”200” width=“100”
-alt="Click here for Book Image">
+<img src="images/RL-Movie-1024x1024.jpg"
+height=”200” width=“100”>
 <br>
 <h3>Table</h3>
 <table>
+    <style>
+        table{
+            border-collapse:collapse;
+            width:50%;
+        }
+        td,th{
+            border:1px solid black;
+            text-align:left
+            padding:8px
+        }
+    </style>
     <tr>
         <th>Country Name</th>
         <th>Reason</th>
@@ -45,7 +55,9 @@ alt="Click here for Book Image">
 </table>
 <hr>
 <h1>Code Display</h1>
-<blockquote cite=“https://stackoverflow.com/questions/75355690/javascript-to-edit-url”> Javascript to edit pathArray </blockquote >
+<blockquote cite=“https://stackoverflow.com/questions/75355690/javascript-to-edit-url”> How to edit pathArray in Javascript?</blockquote >
+    <a href= "https://stackoverflow.com/questions/75355690/javascript-to-edit-url"> Click here for the source code </a >
+    
     <pre>
     var newPathname = "";
     for (i = 0; i < pathArray.length; i++) {
